welcome.lessons.welcome.summative.Moria.scala.error
DwarfCode:2: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:10: error: too many arguments for method droite: ()Unit
  droite(2)
        ^DwarfCode:18: error: not found: value sortie
sortie(){
^