welcome.lessons.welcome.summative.Moria.scala.code
def go(){
  droite(2)
  while(!estSurBiscuit()){
    avance()
  }
  prendBiscuit()
}

def stop(){
  droite(2)
  while(!estSurBiscuit()){
    avance()
  }
  recule()
  poseBiscuit()
}

sortie(){
  droite()
  avance()
  gauche()
  avance()
}


def moria(){
  while(!estFaceMur()){
    go()
    stop()
  }
}